--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.GymVenomApp"
         tools:targetApi="31">
         <activity
+            android:name=".pantalla_3"
+            android:exported="false" />
+        <activity
+            android:name=".pantalla3"
+            android:exported="false" />
+        <activity
             android:name=".pantalla1"
             android:exported="false" />
         <activity
