--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -13,12 +14,14 @@
         android:theme="@style/Theme.GymVenomApp"
         tools:targetApi="31">
         <activity
+            android:name=".DB_1"
+            android:exported="false" />
+        <activity
             android:name=".pantalla4"
             android:exported="false" />
         <activity
             android:name=".pantalla_3"
             android:exported="false" />
-
         <activity
             android:name=".pantalla1"
             android:exported="false" />
@@ -28,7 +31,6 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-
             android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
